# CompressJson

./: README.md  test.txt
C++Version/: CMakeLists.txt
C++Version/Msg/: CMakeLists.txt  Msg.cpp  MsgEntity.cpp  MsgEntity.h  MsgManager.cpp  MsgManager.h
CJ/: CJ.csproj  CJ.sln
CJ/Auto/: CJReading.cs  IController.cs  IMsg.cs  IWorking.cs  JsonGenerater.cs  LoginRet.cs  LoginRetController.cs  LoginRetModel.cs  MsgProcess.cs
CJ/Core/: CJUtil.cs  DynamicNode.cs  Layer.cs  MsgManager.cs  SerializeNode.cs
CJ/Properties/: AssemblyInfo.cs
CJ/Tool/: ReflectionTool.cs
CJC/: CJC.csproj  CJC.sln  DynamicNode.cs  Layer.cs  LoginRet.cs  MsgManager.cs  Program.cs  SerializeNode.cs  Test10.cs  Test11.cs  Test2.cs  Test3.cs  Test4.cs  Test5.cs  Test6.cs  Test7.cs  Test8.cs  Test9.cs
CJC/Auto/: LoginRet.cs  Test10.cs  Test11.cs  Test2.cs  Test3.cs  Test4.cs  Test5.cs  Test6.cs  Test7.cs  Test8.cs  Test9.cs
CJC/Auto/Controller/: LoginRetController.cs
CJC/Auto/Model/: LoginReqModel.cs  LoginRetModel.cs
CJC/Properties/: AssemblyInfo.cs
